// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordRequirements stories snapshot > AllMet story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-md p-6 bg-background border rounded-none"
>
  <div
    class="space-y-2"
  >
    <p
      aria-level="4"
      class="text-sm font-medium text-foreground"
      role="heading"
    >
      Password Requirements
    </p>
    <div
      class="space-y-1.5"
    >
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least 8 characters
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least one uppercase letter
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least one lowercase letter
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least one number
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least one special character
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordRequirements stories snapshot > Empty story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-md p-6 bg-background border rounded-none"
>
  <div
    class="space-y-2"
  >
    <p
      aria-level="4"
      class="text-sm font-medium text-foreground"
      role="heading"
    >
      Password Requirements
    </p>
    <div
      class="space-y-1.5"
    >
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least 8 characters
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least one uppercase letter
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least one lowercase letter
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least one number
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least one special character
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordRequirements stories snapshot > Partial story renders and matches snapshot 1`] = `
<div
  class="w-full max-w-md p-6 bg-background border rounded-none"
>
  <div
    class="space-y-2"
  >
    <p
      aria-level="4"
      class="text-sm font-medium text-foreground"
      role="heading"
    >
      Password Requirements
    </p>
    <div
      class="space-y-1.5"
    >
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least 8 characters
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least one uppercase letter
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least one lowercase letter
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-primary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check h-4 w-4 text-primary"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span>
          At least one number
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-sm transition-colors text-muted-foreground"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-muted-foreground"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span>
          At least one special character
        </span>
      </div>
    </div>
  </div>
</div>
`;
